Fix z-index of visualization related to embed code modal
Closes #272

--- a/app/assets/stylesheets/less/network-viz.less
+++ b/app/assets/stylesheets/less/network-viz.less
@@ -15,7 +15,7 @@
     bottom: 0;
     left: 0;
     height: 100%;
-    z-index: 9900;
+    z-index: 1040;  // Embed Code Modal has z-index 1050 & needs to be on top
   }
 }
 
